--- a/flex-work.html
+++ b/flex-work.html
@@ -8,6 +8,35 @@
     <link rel="stylesheet" href="flex-work.css">
 </head>
 <body>
-    
+<h1>FLEX</h1>
+
+<ul>
+    <li>Home</li>
+    <li>About</li>
+    <li>People</li>
+    <li>Student</li>
+    <li>Jobs</li>
+</ul>
+<br>
+
+<div class="container">
+
+    <header>header</header>
+    <aside class="left">left</aside>
+    <main>main</main>
+    <aside class="rigth">rigth</aside>
+    <footer>footer</footer>
+</div>
+
+<br>
+
+<div class="container1">
+ <header>header</header>
+    <aside class="left">left</aside>
+    <main>main</main>
+    <aside class="rigth">rigth</aside>
+    <footer>footer</footer>   
+</div>
+
 </body>
 </html>
